2002-05-09  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-mime-actions.c:
	(nautilus_mime_get_default_action_type_for_file): 
	(nautilus_mime_get_default_application_for_file_internal): 
	(nautilus_mime_get_default_component_for_file_internal): 
	(nautilus_mime_get_short_list_applications_for_file):
	(nautilus_mime_get_short_list_components_for_file):
	(nautilus_mime_get_all_applications_for_file): 
	(nautilus_mime_extend_all_applications_for_file): 
	(nautilus_mime_remove_from_all_applications_for_file): Plug leaks.
	(nautilus_mime_set_short_list_applications_for_file): Free the
	normal_short_list after computing the delta, and use g_list_free
	on normal_short_list_ids rather than eel_g_list_free_deep.
	(str_list_difference): Duplicate the strings before inserting them
	into the list.

2002-05-09  Dave Camp  <dave@ximian.com>
 
	* src/file-manager/fm-desktop-icon-view.c (mount_parameters_new): 
	(mount_parameters_free): Don't hold references to the view.

2002-05-08  Alex Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas:
	* libnautilus-private/nautilus-file-utilities.c:
	* libnautilus-private/nautilus-file-utilities.h:
	* libnautilus-private/nautilus-file.c:
	* libnautilus-private/nautilus-file.h:
	* libnautilus-private/nautilus-global-preferences.c:
	* libnautilus-private/nautilus-global-preferences.h:
	* libnautilus-private/nautilus-metafile.c:
	* libnautilus-private/nautilus-metafile.h:
	* libnautilus-private/nautilus-thumbnails.c:
	* libnautilus-private/nautilus-vfs-directory.c: 
	* src/nautilus-preferences-dialog.c:
	Remove public metadata

2002-05-09  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c (realize): Unref
	the style after setting it on the widget.

2002-05-08  Alex Larsson  <alexl@redhat.com>

	* data/browser.xml:
	* data/emblems/Makefile.am:
	* data/emblems/documents.png:
	* data/emblems/multimedia.png:
	* data/emblems/package.png:
	* data/emblems/web.png: