@@ -41,7 +41,7 @@
 				  _label="_Stretch Icon"
 				  verb="Stretch"/>
 			<menuitem name="Unstretch"
-				  _label="_Restore Icons' Original Sizes"
+				  _label="Restore Icons' _Original Sizes"
 				  verb="Unstretch"/>
 		</placeholder>
 
