@@ -1,3 +1,15 @@
+2002-05-09  Alex Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-icon-view.c: (fm_icon_view_update_menus):
+	* src/file-manager/nautilus-icon-view-ui.xml:
+	Fix menu mnemonic collision.
+	Patch by Samuel Stringham <sams@e-sa.com>.
+
+2002-05-09  Stuart MacLean <stuart@cs.dal.ca>
+	* src/nautilus-window-menus.c
+	(forget_history_if_confirmed): Make Clear History dialog
+	consistent with other Nautilus dialogs.
+
 2002-05-09  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-mime-actions.c:
